--- a/gorsel.html
+++ b/gorsel.html
@@ -10,6 +10,14 @@
 <!--HTMLREFERENCE.İO HANGİ ELEMENT BLOK HANGİSİ İNLİNE ONU BİZE GÖSTEREN BİR SİTEDİR-->
 <!--a üstüne gel MDN reference yazan yere tıkla-->
 <!--div blog halinde bir kutu span inline sanal şeffaf hayali bir kutu-->
+
+<img src="" alt="">
+<a id="ikiKelimeBoslukOlamaz" class="birinci-sinif ikinci-sinif" data-id="" href=""></a>
+<div class="" id="TeBilgi" data-section=""></div>
+
+
+
+
 <div>
     <h1>HTML</h1>
     <p>
