--- a/Odev3/index.html
+++ b/Odev3/index.html
@@ -65,7 +65,7 @@
   <input class="searchbar" type="text" title="Search">
   <a href="#"> <img class="voice" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png" title="Search by Voice"></a>
 </div>
-<center><img style="height: 19px; position: relative;top: 120px; right: 289px;" height="30px" src="/img/Vector-Search.png"</center>
+<center><img style="height: 19px; position: relative;top: 120px; right: 289px;" height="30px" src="img/Vector-Search.png"</center>
 
 
     <!-- Search bar end -->
